--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ iframe {display: block; width: 100%; border: none; overflow-y: auto; overflow-x:
 </style> 
 </head> 
 <body> 
-<iframe id="tree" name="tree" src="mail.uhserver.com" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe> 
+<iframe id="tree" name="tree" src="http://webmail.vendelino.dominiotemporario.com" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe> 
 </body> 
 </html>
